--- a/index.html
+++ b/index.html
@@ -666,8 +666,8 @@
       </div>
     </div>
     <div class="hero-cta">
-      <a href="#projects" class="btn btn-primary">View Projects</a>
-      <a href="resume.pdf" class="btn btn-outline" target="_blank">Download Resume ↗</a>
+      <a href="C:\Users\adity\Desktop\Portfolio Code\Project Website.html" class="btn btn-primary">View Projects</a>
+      <a href="Aditya New Resume (2025).pdf" class="btn btn-outline" target="_blank">Download Resume ↗</a>
     </div>
   </section>
 
